# ZMQ-Comm

./: CMakeLists.txt  Readme.md  build.sh  setup.py  test_poll_client.cpp
python/: compute_worker.py  config.txt  host.py  partial_config.txt  partial_host.py  swarm_compute_worker.py  swarm_host.py  utils.py
src/: api.cpp  compute_worker.h  config_parser.h  const.h  host.h  inproc_queue.h  msg.h  poller.h  swarm.h  sys_host_api.cpp  sys_worker_api.cpp  utils.h
tests/: test_compute_worker.cpp  test_config.cpp  test_config.txt  test_msg.cpp  test_packed_client.cpp  test_packed_server.cpp  test_poll_client.cpp  test_poll_server.cpp  test_python_call.cpp  test_python_call.py  test_swarm.cpp  test_torch.cpp  test_torch.py  test_torch_move.py  test_worker_api.py  test_zmq_client.cpp  test_zmq_server.cpp
tests/minimal_test/: CMakeLists.txt  test.cpp  test_py.py  utils.cmake
tests/speed_test/: receiver.cpp  sender.cpp
